<resources>
    <string name="app_name">Graph Plotter</string>
    <string name="settings">Settings</string>
    <string name="welcome_message">Welcome to the Graph Plotter!\n\nPlease enter number of points\nto generate.</string>
    <string name="points_prompt">Amount…</string>
    <string name="go">Go!</string>
    <string name="error_unknown">Unknown error</string>
    <string name="save_image">Save image</string>
    <string name="results">Results</string>

    <string name="pref_graph_smooth">Smooth graph</string>

    <string name="table_x" translatable="false">X</string>
    <string name="table_y" translatable="false">Y</string>
</resources>
